resources/public/css/style.css
/* COMMON */

body {
  margin: 0;
  font-family: "Open Sans", sans-serif;
  background-image: url("/images/pizza.jpg");
  background-attachment: fixed;
  background-size: cover;
}

h1 {
  color: black;
  font-size: 2rem;
  font-weight: 700;
}

h2 {
  color: black;
  text-transform: uppercase;
  font-size: 1.3rem;
  font-weight: 700;
}

h3 {
  color: black;
  font-size: 1.2rem;
  font-weight: 700;
}

p  {
  font-size: 1.1rem;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

li {
  margin: 0;
  padding: 0;
}

a {
  color: #dc1e32;
  text-decoration: none;
}

a:hover {
  color: #aa3034;
}

button {
  padding: 10px;
  background-color: #dc1e32;
  border-width: 0;
  border-radius: 3px;
  color: white;
  text-transform: uppercase;
  font-size: 0.8rem;
  font-weight: 700;
}

button:hover,
button:focus {
  background: #aa3034;
}

button:disabled {
  background-color: #dc1e32;
  opacity: 0.75;
}

.badge {
  font-size: 8px;
  font-weight: 700;
  text-transform: uppercase;
  background: #dc1e32;
  color: white;
  border-radius: 3px;
  padding: 2px 3px;
  margin: 0 5px;
}

#layout {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

#main {
  margin: 10px;
  flex-grow: 1;
}

#main > section {
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

/* HEADER */

#header {
  flex-grow: 0;
  background-color: #dc1e32;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#header h1 {
  margin: 0;
  padding: 0;
  font-size: 1.5rem;
  color: white;
}

#header h1 a,
#header h1 a:hover {
  color: white;
}

#header .user {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 0.8em;
  color: white;
  margin-top: 10px;
}

#header .user button {
  margin: 5px 0 0 0;
  padding: 0;
  text-transform: none;
  background: transparent;
}

#header .user button:hover,
#header .user button:focus {
  color: #ddd;
}

/* FOOTER */

#footer {
  flex-grow: 0;
  background: tomato;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
  padding: 20px;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
}

#footer .logo {
  font-size: 3rem;
  margin-bottom: 20px;
}

#footer .copyright {
  font-size: 0.9rem;
}

#footer .links {
  margin-top: 5px;
  font-size: 0.8rem;
}

#footer a {
  color: bisque;
}

#footer a:hover,
#footer a:focus {
  color: white;
}

/* HOME ROUTE */

.thread-list {
  flex-grow: 1;
}

.thread-item {
  background: bisque;
  color: black;
  margin-bottom: 10px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  opacity: 0.85;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
}

a.thread-item:hover,
a.thread-item:focus {
  background-color: wheat;
}

.thread-item .meta {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  color: #333;
  font-size: 0.9rem;
  padding-bottom: 2px;
  border-bottom: 1px solid rgba(0,0,0,0.2);
}

.thread-item .meta .started-by {
  display: flex;
  align-items: center;
}

.thread-item .title {
  font-size: 1.2rem;
  font-weight: normal;
  text-transform: none;
  margin: 10px 0 0 0;
  word-wrap: anywhere;
}

.thread-item .message {
  margin: 20px 0 0 0;
}

.thread-item .actions {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  color: #333;
  font-size: 0.9rem;
  margin-top: 5px;
  padding-top: 5px;
  border-top: 1px solid rgba(0,0,0,0.2);
}

.thread-item .actions button {
  margin: 0 5px 0 0;
  padding: 0;
  text-transform: none;
  background: transparent;
  color: black;
}

.thread-item .actions button:hover,
.thread-item .actions button:focus {
  color: #666;
}


/* THREAD ROUTE */

.thread-contents {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.post-item {
  background: bisque;
  color: black;
  margin-bottom: 10px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  opacity: 0.85;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
}

.post-item.first {
  padding: 7px;
  border: 3px solid wheat;
  opacity: 1;
}

.post-item .meta {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  color: #333;
  font-size: 0.9rem;
  padding-bottom: 2px;
  border-bottom: 1px solid rgba(0,0,0,0.2);
}

.post-item .title {
  font-size: 1.2rem;
  font-weight: normal;
  text-transform: none;
  margin: 10px 0 0 0;
  word-wrap: anywhere;
}

.post-item .meta .started-by,
.post-item .meta .posted-by {
  display: flex;
  align-items: center;
}

.post-item .message {
  font-size: 1rem;
  margin: 20px 0 0 0;
  word-wrap: anywhere;
}

.no-responses {
  background: bisque;
  padding: 10px;
  margin: 0 0 10px 0;
  font-style: italic;
  opacity: 0.75;
}

.post-item .actions {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  color: #333;
  font-size: 0.9rem;
  margin-top: 5px;
  padding-top: 5px;
  border-top: 1px solid rgba(0,0,0,0.2);
}

.post-item .actions button {
  margin: 0 5px 0 0;
  padding: 0;
  text-transform: none;
  background: transparent;
  color: black;
}

.post-item .actions button:hover,
.post-item .actions button:focus {
  color: #666;
}

/* NEW POST/NEW THREAD/LOGIN FORMS */

.new-post,
.new-thread,
.login {
  background: tomato;
  padding: 10px;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
}

.new-post h3,
.new-thread h3,
.login h3 {
  color: white;
  margin: 0 0 10px 0;
}

.new-post form,
.new-thread form,
.login form {
  display: flex;
  flex-direction: column;
}

.new-post label,
.new-thread label,
.login label {
  margin-bottom: 5px;
  color: white;
}

.new-post select,
.new-thread select {
  margin-bottom: 10px;
}

.new-post textarea,
.new-thread textarea {
  margin-bottom: 10px;
  font-size: 1.1rem;
  height: 60px;
}

.new-thread input,
.login input {
  margin-bottom: 10px;
  font-size: 1.1rem;
}

/* RESPONSIVE STYLES FOR DESKTOP SCREENS */

@media only screen and (min-width: 400px) {
  #header {
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    align-items: center;
  }

  #header .user {
    align-items: flex-end;
  }
}

@media only screen and (min-width: 1024px) {
  #main > section {
    flex-direction: row;
    align-items: flex-start;
  }

  #header h1 {
    font-size: 2rem;
  }

  .new-thread,
  .new-post,
  .login {
    margin-left: 10px;
    width: 400px;
  }

  .thread-item .meta,
  .post-item .meta {
    flex-direction: row;
  }
}

